# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-11-30  Michael Jahn
	* HTML export supports video codec name
	* quick filter for volumes

2007-11-29 Vasco Nunes
	* Russian language file updated

2007-11-28  Michael Jahn
	* [#164966] deactivating spellchecker option in preferences dialog disables the depending elements

2007-11-22  Michael Jahn
	* added columns genre, seen, runtime and year to the mainlist
	* enabled reorderable columns
	* column order is saved

2007-11-12  Michael Jahn
	* Kino.de plugin updated
	* fixed pdf export with non-ascii characters in filenames and data
	* pdf export supports sort column from configuration

2007-11-08  Michael Jahn
	* status bar shows count of movies after applying a filter
	* changed HTML export:
	  + exported poster file names contain the movie number instead of the random name
	  + movies without a poster get the griffith picture

2007-10-15  Michael Jahn
	* Kino.de plugin updated
	* Fetch from Amazon function fixed

2007-09-20 Vasco Nunes
	* Italian language file updated

2007-09-06 Vasco Nunes
	* Berlios task [#003126] complete. Griffith's dir should point to 'Application Data' on windows systems.

2007-09-06  Michael Jahn
	* save window state, position and size on windows systems
	* save selected quick filter criteria
	* fixed backup if path or filename contains special characters (like german umlauts)
	* use deflate for backup if available
	* added auto-test feature for movie plugins (only used by developers; execute
	  test_movieplugins.py directly)
	* FilmeVonAZ and OFDb plugin updated
	* fixed saving media and vcodec defaults in preferences dialog

2007-09-03  Vasco Nunes
	* Some documentations updates

---- 0.9.5 ---

2007-09-02  Piotr Ożarowski
	* Translation files synchronized with Rosetta
	  + new: Catalan, Norwegian Bokmal
	  + uptaded: Brazilian Portuguese, Cech, Dutch, French, German, Italian, Portuguese, Russian
	* Polish translation updated