@@ -40,12 +40,26 @@ class ExportPlugin:
 		self.db = database
 		self.locations = locations
 		self.parent = parent_window
+		if kwargs.has_key('config'):
+			self.persistent_config = kwargs['config']
+		else:
+			self.persistent_config = None
 		self.export_xml()
 
 	def export_xml(self):
-		filename = gutils.file_chooser(_("Export a %s document")%"XML", action=gtk.FILE_CHOOSER_ACTION_SAVE, \
-			buttons=(gtk.STOCK_CANCEL,gtk.RESPONSE_CANCEL,gtk.STOCK_SAVE,gtk.RESPONSE_OK),name='griffith_list.xml')
+		basedir = None
+		if not self.persistent_config is None:
+			basedir = self.persistent_config.get('export_dir', None, section='export-xml')
+		if basedir is None:
+			filename = gutils.file_chooser(_("Export a %s document")%"XML", action=gtk.FILE_CHOOSER_ACTION_SAVE, \
+				buttons=(gtk.STOCK_CANCEL,gtk.RESPONSE_CANCEL,gtk.STOCK_SAVE,gtk.RESPONSE_OK),name='griffith_list.xml')
+		else:
+			filename = gutils.file_chooser(_("Export a %s document")%"XML", action=gtk.FILE_CHOOSER_ACTION_SAVE, \
+				buttons=(gtk.STOCK_CANCEL,gtk.RESPONSE_CANCEL,gtk.STOCK_SAVE,gtk.RESPONSE_OK),name='griffith_list.xml',folder=basedir)
 		if filename[0]:
+			if not self.persistent_config is None and filename[1]:
+				self.persistent_config.set('export_dir', filename[1], section='export-xml')
+				self.persistent_config.save()
 			overwrite = None
 			if os.path.isfile(filename[0]):
 				response = gutils.question(self, _("File exists. Do you want to overwrite it?"), 1, self.parent)
